--- a/src/app/modules/heroes/pages/hero-detail/hero-detail.component.html
+++ b/src/app/modules/heroes/pages/hero-detail/hero-detail.component.html
@@ -8,7 +8,7 @@
       <h3 class="mb-4">Biography</h3>
       <p>{{ hero.biography }}</p>
       <div class="d-flex justify-content-between pb-5">
-        <img [src]="setHomeImage()" [alt]="hero.home" class="home-image">
+        <img [src]="hero.home | homeImage" [alt]="hero.home" class="home-image">
         <div class="align-self-center">
           <button class="btn btn-success"
                   type="button"
